--- a/.local/ProjectSettings.json
+++ b/.local/ProjectSettings.json
@@ -1,1 +1,1 @@
-{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"Main.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectActivitiesViewState":"{\"Main.xaml\":[{\"ActivityIdRef\":\"WriteLine_1\",\"IsAdvancedOptionsExpanded\":false,\"Widgets\":{}}]}"}
+{"ProjectWatches":"{\"Value\":[]}","OpenedDocuments":"[\"Main.xaml\"]","ProjectBreakpoints":"{\"Value\":{}}","ProjectActivitiesViewState":"{\"Main.xaml\":[]}"}
